--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 				<!-- /.short-info -->	
 				<div class="full-info">
 					<nav class="tabs">
-						<a href="#" class="tabs-item tabs-active">Описание</a>
-						<a href="#" class="tabs-item">Рецензии</a>
-						<a href="#" class="tabs-item">Премьеры</a>
-						<a href="#" class="tabs-item">Актеры</a>
-						<a href="#" class="tabs-item">Награды</a>
-						<a href="#" class="tabs-item">Факты</a>
-						<a href="#" class="tabs-item">Сайты</a>
+						<a href="#about" class="tabs-item tabs-active">Описание</a>
+						<a href="#reviews" class="tabs-item">Рецензии</a>
+						<a href="#premieres" class="tabs-item">Премьеры</a>
+						<a href="#actors" class="tabs-item">Актеры</a>
+						<a href="#awards" class="tabs-item">Награды</a>
+						<a href="#facts" class="tabs-item">Факты</a>
+						<a href="#cites" class="tabs-item">Сайты</a>
 						<a href="#" class="tabs-item">
 							<img src="./img/bookmark-icon.svg" alt="bookmark-added" class="bookmark-added">
 						</a>
@@ -84,7 +84,8 @@
 							</p>  
 							<p class="text">
 							На Comic-Con в Сан-Диего в июле 2016 года было официально подтверждено, что Аффлек станет режиссёром картины. В августе 2016 года на одной из страниц Аффлека в социальных сетях был опубликован тестовый материал, в котором был показан персонаж Детстроук. 8 сентября 2016 года Джефф Джонс подтвердил, что Джо Манганьелло сыграет наёмника Слейда Уилсона, который, возможно, станет главным злодеем фильма.</p>
-                        </div>
+						</div>
+						
                         <div class="tabs-content" id="reviews">
                             <p class="text">Тут скоро появятся Рецензии</p>
                         </div>
