--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<!-- /.short-info -->	
 				<div class="full-info">
 					<nav class="tabs">
-						<a href="#about" class="tabs-item tabs-active">Описание</a>
+						<a href="#about" class="tabs-item tabs-item-active">Описание</a>
 						<a href="#reviews" class="tabs-item">Рецензии</a>
 						<a href="#premieres" class="tabs-item">Премьеры</a>
 						<a href="#actors" class="tabs-item">Актеры</a>
